--- a/colmarAcademy.html
+++ b/colmarAcademy.html
@@ -4,12 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="colmarAcademy.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
     <title>Colmar Academy</title>
 </head>
 <body>
     <header>
-        <nav class="nav_desktop"></nav>
-        <nav class="nav_mobile"></nav>
+        <nav class="nav_desktop">
+            <div class="logo">
+                <img src="./images/ic-logo.svg" alt="logo">
+                <p><strong>COLMAR</strong></p>
+                <p id="academy"><strong>ACADEMY</strong></p>
+            </div>
+            <div class="nav_menu">
+                <ul>
+                    <li><a href="#">Our campus</a></li>
+                    <li><a href="#">Online</a></li>
+                    <li><a href="#">For companies</a></li>
+                    <li><a href="#">Sign in</a></li>
+                </ul>
+            </div>
+        </nav>
+        <nav class="nav_mobile">
+            <ul>
+                <li><img src="./images/ic-logo.svg" alt="logo"></li>
+                <li><img src="./images/ic-on-campus.svg" alt="on campus"></li>
+                <li><img src="./images/ic-online.svg" alt="online"></li>
+                <li><img src="./images/ic-login.svg" alt="sign in"></li>
+            </ul>
+        </nav>
     </header>
     <main>
         <section class="hero">
