--- a/colmarAcademy.html
+++ b/colmarAcademy.html
@@ -37,8 +37,14 @@
     </header>
     <main>
         <section class="hero">
-            <img src="" alt="">
-            <div class="hero_text"></div>
+            <div class="hero_img">
+                <img src="./images/banner.jpg" alt="banner">
+            </div>
+            <div class="hero_text">
+                <h2>Learn something new everday</h2>
+                <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h4>
+                <button>Start here</button>
+            </div>
         </section>
         <section class="info">
             <div class="info_start"></div>
