--- a/colmarAcademy.html
+++ b/colmarAcademy.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="colmarAcademy.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&display=swap"
+        rel="stylesheet">
     <title>Colmar Academy</title>
 </head>
+
 <body>
     <header>
         <nav class="nav_desktop">
@@ -47,8 +50,42 @@
             </div>
         </section>
         <section class="info">
-            <div class="info_start"></div>
-            <div class="info_detail"></div>
+            <div class="info_start">
+                <img src="./images/information-main.jpg" alt="main">
+                <div class="info_start_text">
+                    <h2>It doesn't hurt to keep practing</h2>
+                    <p id="quote">&quot;Lorem ipsum dolor sit amet consectetur, adipisicing elit. Delectus accusamus mollitia odio
+                        sint illo facere eius excepturi omnis. Similique facere, provident possimus atque voluptates,
+                        doloribus sint dignissimos nisi rerum eos fuga. Maxime, odit.&quot;</p>
+                    <p>Emanual, Sr Strategist at Hiring.com</p>
+                </div>
+            </div>
+            <div class="info_detail">
+                <div class="info_detail_card">
+                    <img src="./images/information-orientation.jpg" id="orientation" alt="orientation">
+                    <div class="info_detail_card_text">
+                        <h4>Orientation day</h4>
+                        <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
+                        <a href="#">Read more</a>
+                    </div>
+                </div>
+                <div class="info_detail_card">
+                    <img src="./images/information-campus.jpg" id="campus" alt="campus">
+                    <div class="info_detail_card_text">
+                        <h4>Our campus</h4>
+                        <p>Find which campus is close by you</p>
+                        <a href="#">Read more</a>
+                    </div>
+                </div>
+                <div class="info_detail_card">
+                    <img src="./images/information-guest-lecture.jpg" id="guest" alt="guest">
+                    <div class="info_detail_card_text">
+                        <h4>Our guest lecture</h4>
+                        <p>Join a keynote with Oliver Sack about music in medical treatment</p>
+                        <a href="#">Read more</a>
+                    </div>
+                </div>
+            </div>
         </section>
         <section class="course">
             <div class="course_desktop"></div>
@@ -61,4 +98,5 @@
     </main>
     <footer></footer>
 </body>
+
 </html>
